apps/security/authentik/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: security-egress-default-deny
  namespace: security
spec:
  endpointSelector: {}
  enableDefaultDeny:
    egress: true
    ingress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - cluster
        - kube-apiserver
    - toCIDR:
        - "10.0.60.15/32"
      toPorts:
        - ports:
            - port: "30188"
              protocol: TCP
